# Gazebo_trajectory_display

./: CMakeLists.txt  README.md  package.xml
launch/: draw.launch
src/: draw_traj_plugin.cc
urdf/: root_.xacro
